--- a/kasa/src/styles/index.css
+++ b/kasa/src/styles/index.css
@@ -274,6 +274,8 @@
   margin-bottom: 30px;
 }
 .collapse__bloc {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -295,6 +297,12 @@
 }
 .collapse__render-content {
   background-color: #f6f6f6;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.8s ease-in-out;
+}
+.collapse__render-content.open {
+  max-height: 1000px;
 }
 .collapse__content {
   color: #ff6060;
